Added get involved section and bulked up the preface

--- a/index.html
+++ b/index.html
@@ -26,33 +26,11 @@
         </nav>
         <div class="body">
             <div>
-                <h1 id="preface"><b>Preface</b></h1>
-                <div class="container" id="preface_body">
-                    <h2>Dear reader,</h2>
-                    <p class="context">
-                        PCEG (PARC Community Engagement Group) is a group of Brandeis students who have been impacted by sexual violence, dating/domestic violence, stalking and/or harassment. 
-                        Our group is comprised of members of the Brandeis student community, and is led by two PARC student facilitators. 
-                        We have had meetings regularly together over the course of several months, in which we read and discussed readings and topics relating to anti-violence activism. 
-                        A lot of our focus was on anti-oppression and confronting the history of racism within some mainstream anti-violence movements, as well as acknowledging that the majority of progress that has been made in anti-violence activism has come from Black Women and Femmes (although this work is often co-opted by white activists).<br><br> 
-                        We support anti-violence responses that are also anti-policing and anti-incarceration. 
-                        At the end of our time reading and learning together we chose this Zine project to center the voices of people who’ve experienced violence and to stimulate interest in anti-violence activism in the community.
-                    
-                        Work together with the group to explain significance of the project maybe
-                    </p>
-                    <h2>After You Read:</h2>
-                    <p class="context">
-                        We hope that this Zine is not just the end of a project but also a beginning of community change. 
-                        At the end of this Zine we have created a list of action steps.
-                    </p>
-                </div>
-                <br>
-            </div>
-            <br>
-            <div>
                 <h1 id="content_note"><b>Content Note:</b></h1>
                 <div class="container" id="content_note_body">
                     <p class="context">
                         These letters are the real experiences of people who have experienced violence. 
+                        They contain mentions of those experiences of violence as well as instances of victim-blaming.
                         If you choose to read on, we thank you for your emotional labor and acknowledge that some difficult emotions may be brought up. 
                         For confidential 24/7 support, you may call the PARC hotline: +1-781-736-3370. 
                         You can also speak with a peer advocate through the <a href="https://www.brandeis.edu/parc/contact/chat.html">anonymous chatbox.</a>
@@ -60,6 +38,40 @@
                         Sarah’s hours are Thursday 4:00-5:00pm EST and Friday 12:00-2:00pm EST during the school year.
                     </p>
                 </div>
+            </div>
+            <br>
+            <div>
+                <h1 id="preface"><b>Preface</b></h1>
+                <div class="container" id="preface_body">
+                    <h2>Dear reader,</h2>
+                    <p class="context">
+                        PCEG (PARC Community Engagement Group) is a group of Brandeis students who have been impacted by sexual violence, dating/domestic violence, stalking and/or harassment.
+                        Our group is facilitated by PARC student members, but PCEG is independent and entirely student-run. 
+                        We have had meetings regularly together over the course of several months, in which we read and discussed readings and topics relating to anti-violence activism. 
+                        A lot of our focus was on anti-oppression and confronting the history of racism within some mainstream anti-violence movements, as well as acknowledging that the majority of progress that has been made in anti-violence activism has come from Black Women and Femmes (although this work is often co-opted by white activists).<br><br> 
+                        We support anti-violence responses that are also anti-policing and anti-incarceration. 
+                        At the end of our time reading and learning together, we chose this zine project to center the voices of people who’ve experienced violence and to stimulate interest in anti-violence activism in the community.<br><br>
+
+                        We decided to create a zine because zine-ing is a great format for getting the voices of a small non-professional group to be heard.
+                        We owe a lot of inspiration to the riot grrrl movement of feminist zines, but have intentionally chosen not to directly mimic their style. 
+                        We want to be conscious of the fact that many people and ideas in the in the riot grrrl movement were hostile or exclusionary towards women of color and exclusive to cisgender women.
+                        We want this zine to be a space for stories of people of all races, genders, sexualities, and abilities, and inclusive of all experiences of violence.
+                        We are also committed to viewing sexual violence, dating/domestic violence, stalking, and sexual harrassment as connected to other forms of violence, including, but not limited to, racial violence.<br><br>
+
+                        For this zine, we chose the theme of letters.
+                        Letters have had various significant roles depending on their recipient.
+                        We can send letters to people as a form of direct communication, send letters to governments and institutions as a form of political action, send letters to strangers to create connections and build community, and keep letters to ourselves as a form of venting and healing.
+                        This project is an open letter to the world that aims to combine these purposes.
+                        The letters themselves are a work of expression and a willingness to be seen.
+                        We hope that putting this zine into the world will allow people to hear the direct stories of people impacted by violence, help to build a sense of connection, encourage activism, and help guide self-reflection and healing.
+                    </p>
+                    <h2>After You Read:</h2>
+                    <p class="context">
+                        We have created a list of action steps at the end of this zine to help achieve these goals.
+                        We hope that this zine marks not just the end of a project, but also the beginning of a community change.
+                    </p>
+                </div>
+                <br>
             </div>
             <br>
             <div>
@@ -228,18 +240,28 @@
                     <ul>
                         <li><a href="https://survivedandpunished.org/donate/">Survived and Punished</a></li>
                         <li><a href="https://reachma.org/donate/donate-goods/">REACH Beyond Domestic Violence</a></li>
-                        <li><a href="https://barcc.org/join/donation">Boston Area Rape Crisis Center</a></li>
+                        <li><a href="https://barcc.org/join/donation">Boston Area Rape Crisis Center (BARCC)</a></li>
                         <li><a href="https://www.tnlr.org/en/donate/">The Network/La Red</a></li>
                         <li><a href="https://incite-national.org/donate/">Incite!</a></li>
                         <li><a href="https://www.nationalcouncil.us/">The National Council</a></li>
                         <li><a href="https://linktr.ee/brandeismutualaid">Brandeis Mutual Aid</a></li>
-                        <li><a href="https://www.surjboston.org/donate">Showing Up For Racial Justice Boston</a></li>
+                        <li><a href="https://www.surjboston.org/donate">Showing Up For Racial Justice (SURJ) Boston</a></li>
                         <li><a href="https://www.massbailfund.org/donate.html">The Massachusetts Bail Fund</a></li>
                         <li><a href="https://secure.actblue.com/donate/ms_blm_homepage_2019">Black Lives Matter</a></li>
                     </ul>
                     <h3>3. Get Informed</h3>
-                    <h4>Our Reading List:</h4>
-                    <h4>4. Get Involved in Activism</h4>
+                    <p>Click <a href="https://docs.google.com/document/d/1a5QDMrWAse6ibgjHaovnKxfg1ufo8FFtUZnCSpRXC18/edit">here</a> to view our group's reading list!</p>
+                    <h4>4. Get Involved in...</h4>
+                    <ul>
+                        <li>campaigning, convening, or letter-writing with <a href="https://survivedandpunished.org/projects/">Survived and Punished</a></li>
+                        <li>volunteering, organizing, or training at <a href="https://reachma.org/get-involved/">REACH</a></li>
+                        <li>volunteering, interning, events, or action at <a href="https://barcc.org/join">BARCC</a></li>
+                        <li>volunteering, interning, working, or collaborating at <a href="http://www.tnlr.org/en/volunteer/">The Network/La Red</a></li>
+                        <li>getting or offering help at <a href="https://mutualaidwaltham.org/">Waltham Mutual Aid</a></li>
+                        <li>education and action at <a href="https://www.surjboston.org/get-involved">SURJ Boston</a></li>
+                        <li>educating yourself, petitioning, phonebanking, and more with the <a href="https://linktr.ee/BlackActionPlan">Black Action Plan</a></li>
+                        <li>education, action, and events at <a href="https://www.facebook.com/blacklivesmattercambridge/?ref=page_internal">Black Lives Matter Cambridge</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
