Updated national council link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="container" id="content_note_body">
                     <p class="context">
                         These letters are the real experiences of people who have experienced violence. 
-                        They contain mentions of those experiences of violence as well as instances of victim-blaming.
+                        They contain mentions of sexual assault, abuse, dating violence, and victim blaming.
                         If you choose to read on, we thank you for your emotional labor and acknowledge that some difficult emotions may be brought up. 
                         For confidential 24/7 support, you may call the PARC hotline: +1-781-736-3370. 
                         You can also speak with a peer advocate through the <a href="https://www.brandeis.edu/parc/contact/chat.html">anonymous chatbox.</a>
@@ -243,7 +243,7 @@
                         <li><a href="https://barcc.org/join/donation">Boston Area Rape Crisis Center (BARCC)</a></li>
                         <li><a href="https://www.tnlr.org/en/donate/">The Network/La Red</a></li>
                         <li><a href="https://incite-national.org/donate/">Incite!</a></li>
-                        <li><a href="https://www.nationalcouncil.us/">The National Council</a></li>
+                        <li><a href="https://secure.actblue.com/donate/free-her">The National Council</a></li>
                         <li><a href="https://linktr.ee/brandeismutualaid">Brandeis Mutual Aid</a></li>
                         <li><a href="https://www.surjboston.org/donate">Showing Up For Racial Justice (SURJ) Boston</a></li>
                         <li><a href="https://www.massbailfund.org/donate.html">The Massachusetts Bail Fund</a></li>
