--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             </div>
         </nav>
         <div class="body">
+            <div class="container">
+                <img src="./assets/images/cover.jpg" alt="Cover collage for Zine" width="100%" height="100%" class="center">
+            </div>
+            <br>
             <div>
                 <h1 id="content_note"><b>Content Note:</b></h1>
                 <div class="container" id="content_note_body">
