Added acknowledgements section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
             <a class="navbar-brand" href="">Brandeis PCEG Zine</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,6 +21,7 @@
                     <a class="nav-item nav-link" href="#content_note">Content Note</a>
                     <a class="nav-item nav-link" href="#zine">Zine</a>
                     <a class="nav-item nav-link" href="#action_steps">Action Steps</a>
+                    <a class="nav-item nav-link" href="#acknowledgements">Acknowledgements</a>
                 </div>
             </div>
         </nav>
@@ -268,6 +269,18 @@
                     </ul>
                 </div>
             </div>
+            <div>
+                <h1 id="acknowledgements"><b>Acknowledgements:</b></h1>
+                <div class="container" id="acknowledgements_body">
+                    <p class="context">
+                        We want to thank you all for taking the time to read this, and to especially thank those who contributed.
+                        The process of writing a letter and making it available to the public about experiences that are so personal and difficult to relive can be incredibly taxing to say the least.
+                        We also want to acknowledge the strength that comes along with getting involved in other ways, and taking space for yourself when needed.
+                        Overall, we just want to appreciate all of you for coming together and helping us create something really meaningful.
+                    </p>
+                </div>
+            </div>
+            <br>
         </div>
     </body>
 </html>
