Added contact us section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <a class="nav-item nav-link" href="#zine">Zine</a>
                     <a class="nav-item nav-link" href="#action_steps">Action Steps</a>
                     <a class="nav-item nav-link" href="#acknowledgements">Acknowledgements</a>
+                    <a class="nav-item nav-link" href="#contact_us">Contact Us</a>
                 </div>
             </div>
         </nav>
@@ -277,6 +278,16 @@
                         The process of writing a letter and making it available to the public about experiences that are so personal and difficult to relive can be incredibly taxing to say the least.
                         We also want to acknowledge the strength that comes along with getting involved in other ways, and taking space for yourself when needed.
                         Overall, we just want to appreciate all of you for coming together and helping us create something really meaningful.
+                    </p>
+                </div>
+            </div>
+            <br>
+            <div>
+                <h1 id="contact_us"><b>Contact Us:</b></h1>
+                <div class="container" id="contact_us_body">
+                    <p class="context">
+                        If you have any interest in reaching out to the facilitators of this website and project, feel free to email us at parcceg@gmail.com.
+                        If you have any suggestions about things to add to our reading list, list of organizations to donate to, or our list on how to get involved, you can either email us at the above address, or you can submit them to <a href="https://docs.google.com/forms/d/e/1FAIpQLSc6Qv5qwcEws1hHfkUEjzEBrYKzvMn5QSKXZdphjnv4UU9J1w/viewform">this google form</a>!
                     </p>
                 </div>
             </div>
